--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
-
-    <button id="sound-toggle-btn" class="btn-sound">🔊</button>
-    <button id="pause-btn" class="btn-pause">||</button>
-
     <div class="game-container">
         
+        <button id="sound-toggle-btn" class="btn-sound">🔊</button>
+        <button id="pause-btn" class="btn-pause">||</button>
+
         <div class="scoreboard" id="scoreboard">
             <div id="team1-display" class="team-score">
                 <span id="team1-name">Команда 1</span>: <span id="team1-score">0</span>
@@ -45,7 +44,7 @@
                     <li>За кожне вгадане слово натисніть "Зараховано".</li>
                     <li>Щоб пропустити складне слово, натисніть "Пропустити".</li>
                 </ul>
-                <p>Перемагає команда, яка першою набере необхідну кількість балів (або більше за всіх після фінального раунді).</p>
+                <p>Перемагає команда, яка першою набере необхідну кількість балів (або більше за всіх після фінального раунду).</p>
             </div>
             <button class="btn-primary" data-target="main-menu-screen">Назад</button>
         </div>
