--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                     <option value="mixed" selected>Змішаний (всі слова)</option>
                 </select>
 
-                <button id="sound-toggle-btn" class="btn-sound-settings">🔊</button>
+                <label for="sound-toggle-btn">Налаштування звуку:</label>
+                <button id="sound-toggle-btn" class="btn-sound-settings">Звук: Увімк. 🔊</button>
             </div>
             <button id="start-btn" class="btn-primary">Почати гру</button>
             <button class="btn-tertiary" data-target="main-menu-screen">Назад</button>
