--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 </div>
             <p>Чи встигла команда його вгадати?</p>
             <div class="buttons">
-                <button id="last-word-skip-btn" class="btn-secondary">❌ Не вгадано</button>
-                <button id="last-word-correct-btn" class="btn-success">✅ Зараховано</button>
+                <button id="last-word-skip-btn" class="btn-secondary">❌ Ні</button>
+                <button id="last-word-correct-btn" class="btn-success">✅ Так</button>
             </div>
         </div>
 
